# chat-server-client

./: .gitignore  CMakeLists.txt  Makefile  build.bat  build.py  build.sh
.github/workflows/: build.yml
src/: chat_client_template.cpp  server_chat.cpp
src/lib/ChatClient/include/: ChatClient.h  NetworkingWrapper.h
src/lib/ChatClient/src/: ChatClient.cpp
src/main/: client_chat.cpp
